# mentor-api

./: .env  Cargo.toml
migrations/2026-01-24-205348-0000_create_routines/: down.sql  up.sql
migrations/2026-01-24-205356-0000_create_routine_parts/: down.sql  up.sql
migrations/2026-01-26-225150-0000_categories/: up.sql
migrations/2026-01-27-004502-0000_add/: down.sql  up.sql
migrations/2026-01-27-234108-0000_routine_part_deleted/: down.sql  up.sql
migrations/2026-01-29-011034-0000_add/: down.sql  up.sql
migrations/2026-01-30-054238-0000_goal_parent_id/: down.sql  up.sql
migrations/2026-01-31-014410-0000_add_goal_lifetime/: down.sql  up.sql
migrations/2026-02-06-022855-0000_add_todos/: down.sql  up.sql
src/: db.rs  lib.rs  main.rs
src/dto/: todo_dto.rs
src/models/: mod.rs
src/repositories/: goal_repository.rs  mod.rs  todo_repository.rs
src/routes/: goal_routes.rs  mod.rs  routine_routes.rs  todo_routes.rs
src/schema/: mod.rs
src/server/: mod.rs
src/services/: goal_service.rs  mod.rs
