[package]
name = "mentor-api"
version = "0.1.0"
edition = "2024"

#[profile.dev]
#opt-level = 3

[dependencies]
axum = { version = "0.8.8" }
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
diesel = { version = "2.3.5", features = ["postgres", "chrono"] }
dotenvy = "0.15.7"
thiserror = "2.0.18"
chrono = { version = "0.4.43", features = ["serde"] }
diesel-async = { version = "0.7.4", features = ["postgres"] }
tower-http = { version = "0.6.8", features = ["cors"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
