[package]
name = "mentor-api"
version = "0.1.0"
edition = "2024"

#[profile.dev]
#opt-level = 3

[dependencies]
axum = { version = "0.8.8" }
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
diesel = { version = "2.3.5", features = ["postgres", "chrono", "uuid"] }
dotenvy = "0.15.7"
chrono = { version = "0.4.43", features = ["serde"] }
diesel-async = { version = "0.7.4", features = ["postgres", "deadpool"] }
tower-http = { version = "0.6.8", features = ["cors"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
utoipa = { version = "5.4.0", features = ["chrono", "axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }
deadpool = "0.12.3"

[dependencies.uuid]
version = "1.20.0"
features = [
    "v7",
    "fast-rng",
    "macro-diagnostics",
]
